--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+"<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -1111,3 +1111,4 @@ Hora: ${hora}`;
     </script>
 </body>
 </html>
+"
